--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-unless": "^2.1.3",
+    "fcm-node": "^1.6.1",
+    "firebase-admin": "^11.4.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "mongoose-unique-validator": "^3.1.0",
