--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
-    "nodemailer-express-handlebars": "^6.0.0"
+    "nodemailer-express-handlebars": "^6.0.0",
+    "otp-generator": "^4.0.0"
   }
 }
