--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "HSB",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-unless": "^2.1.3",
     "fcm-node": "^1.6.1",
     "firebase-admin": "^11.4.1",
+    "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "mongoose-unique-validator": "^3.1.0",
