--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "firebase-admin": "^11.4.1",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
     "mongoose": "^6.8.2",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
     "nodemailer-express-handlebars": "^6.0.0",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "webpack": "^5.75.0"
